# tiresias-core

./: .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  bootstrap-onprem.sh  docker-compose.onprem.yml  docker-compose.yml  pyproject.toml
policies/: default.yaml
src/tiresias/: bootstrap.py  config.py
src/tiresias/analytics/: api_telemetry.py  unified.py
src/tiresias/auth/: pdp.py  rate_limiter.py  spend_tracker.py
src/tiresias/dashboard/: analytics.py  app.py  auth.py  router.py
src/tiresias/encryption/: aead.py  envelope.py
src/tiresias/policy/: loader.py  sop_policy.py
src/tiresias/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  health.py  ollama.py  openai.py  router.py
src/tiresias/proxy/: app.py  generic.py  saas_auth.py  (+2 more)
tests/: conftest.py  test_bootstrap.py  test_integration.py  test_phase7_config.py  test_sop_policy.py
tests/test_dashboard/: test_analytics.py  test_auth.py  test_replay.py  test_static.py
tests/test_encryption/: test_aead.py  test_envelope.py
tests/test_phase5/: test_api_pricing.py  test_api_telemetry.py  test_generic_proxy.py  test_phase5_app.py  test_unified_analytics.py
tests/test_phase9/: test_oss_prep.py
tests/test_providers/: test_anthropic.py  test_base.py  test_failover.py  test_gemini.py  test_groq.py  test_health.py  test_openai.py  test_registry.py  test_router.py
tests/test_proxy/: test_app.py  test_interceptor.py
tests/test_storage/: test_engine.py  test_retention.py  test_schema.py
tests/test_tracking/: test_pricing.py  test_tokens.py
(+19 files in other folders)
