[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiresias-core"
version = "1.0.0"
description = "Self-hosted AI observability proxy — model-agnostic, open source core"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0.38",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.20",
    "asgi-lifespan>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tiresias"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build]
sources = ["src"]
